feat: allow bounded sizing of student and demo machines
